--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
     <ul class="project-list">
         <li class="project">
             <a href="https://evgenyfakhrutdinov.github.io/metrika-site/" target="_blank">
-                <img src="/resources/project-metrika.png" alt="Проект сайта Realhome">
+                <img src="../resources/project-metrika.png" alt="Проект сайта Realhome">
                 <h3 class="project__title">Metrika</h3>
                 <p class="project__description">дизайн, верстка, настройка</p>
             </a>
         </li>
     <li class="project">
-        <img src="/resources/project-glass.png" alt="Проект сайта GLASS">
+        <img src="../resources/project-glass.png" alt="Проект сайта GLASS">
         <h3 class="project__title">GLASS</h3>
         <p class="project__description">разработка интерфейса</p>
     </li>
         <li class="project">
-            <img src="/resources/project-fesiyen.png" alt="Проект сайта Fesiyen">
+            <img src="../resources/project-fesiyen.png" alt="Проект сайта Fesiyen">
             <h3 class="project__title">Fesiyen</h3>
             <p class="project__description">разработка интерфейса</p>
         </li>
@@ -63,22 +63,22 @@
             <h2 class="competencies__title">Мои компетенции</h2>
             <ul class="competencies-list">
                 <li class="competention">
-                    <img class="competention__image" src="/resources/html-img.png" alt="html image">
+                    <img class="competention__image" src="../resources/html-img.png" alt="html image">
                     <h3 class="competention__title">HTML и CSS</h3>
                     <p class="competention__desc">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
                 </li>
                 <li class="competention">
-                    <img class="competention__image" src="/resources/js-img.png" alt="JavaScript image">
+                    <img class="competention__image" src="../resources/js-img.png" alt="JavaScript image">
                     <h3 class="competention__title">JavaScript</h3>
                     <p class="competention__desc">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
                 </li>
                 <li class="competention">
-                    <img class="competention__image" src="/resources/lib-img.png" alt="Library image">
+                    <img class="competention__image" src="../resources/lib-img.png" alt="Library image">
                     <h3 class="competention__title">Работа с библиотеками и фреймворками</h3>
                     <p class="competention__desc">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
                 </li>
                 <li class="competention">
-                    <img class="competention__image" src="/resources/web-img.png" alt="Web image">
+                    <img class="competention__image" src="../resources/web-img.png" alt="Web image">
                     <h3 class="competention__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
                     <p class="competention__desc">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
                 </li>
@@ -90,25 +90,25 @@
             <h2 class="services__title">Помогаю реализовать <br>широкий спектр задач</h2>
             <ul class="service-list">
                 <li class="service">
-                    <img class="service__image" src="/resources/service-dev.png" alt="Изображение с созданием сайта">
+                    <img class="service__image" src="../resources/service-dev.png" alt="Изображение с созданием сайта">
                     <div class="service__black-ellipse">
-                        <img src="/resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                        <img src="../resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
                         <h3 class="service__title">Разработка сайта под ключ</h3>
                         <p class="service__desc">Это создание дизайн веб-сайтов, созданный для удобства пользователя и решения бизнес-задач
                             Сайты должны быть понятными и удобными, ведь чем понятнее сайт, тем быстрее пользователь совершит целевое действие</p>
                     </div>
                 </li>
                 <li class="service">
-                    <img class="service__image" src="/resources/service-layout.png" alt="Изображение с созданием сайта">
+                    <img class="service__image" src="../resources/service-layout.png" alt="Изображение с созданием сайта">
                     <div class="service__black-ellipse">
-                        <img src="/resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                        <img src="../resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
                         <h3 class="service__title">Верстка сайтов</h3>
                         <p class="service__desc">Это процесс создания HTML-документов и применения к ним стилей на CSS. Фронтенд разработчик может помочь создать привлекательный и удобный интерфейс для вашего сайта</p>
                     </div>
                     <li class="service">
-                        <img class="service__image" src="/resources/service-mobiledev.png" alt="Изображение с разработкой мобильного интерфейса">
+                        <img class="service__image" src="../resources/service-mobiledev.png" alt="Изображение с разработкой мобильного интерфейса">
                         <div class="service__black-ellipse">
-                            <img src="/resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                            <img src="../resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
                             <h3 class="service__title">Разработка мобильного интерфейса</h3>
                             <p class="service__desc">Это процесс создания интерактивных элементов на странице с помощью JavaScript. Фронтенд разработчик может помочь создать динамический и удобный пользовательский интерфейс для вашего сайта или приложения.</p>
                         </div>
