--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <ul class="project-list">
         <li class="project">
             <a href="https://evgenyfakhrutdinov.github.io/metrika-site/" target="_blank">
-                <img src="../resources/project-metrika.png" alt="Проект сайта Realhome">
+                <img src="../resources/project-metrika.png" alt="Проект сайта Metrika">
                 <h3 class="project__title">Metrika</h3>
                 <p class="project__description">дизайн, верстка, настройка</p>
             </a>
