--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Geologica&display=swap" rel="stylesheet">
-<link rel="icon" href="resources/favicon.ico" sizes="16x16" type="image/x-icon">
+<link rel="icon" href="resources/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css" />
     <title>Портфолио</title>
   </head>
