--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
         <div class="container">
-<div class="logo">Fakhrutdinov</div>
+<a class="logo" href="#">Fakhrutdinov</a>
         <nav class="nav">
             <a href="#projects" class="nav-link">портфолио</a>
             <a href="#competencies" class="nav-link">компетенции</a>
@@ -46,14 +46,18 @@
             </a>
         </li>
     <li class="project">
-        <img src="resources/project-glass.png" alt="Проект сайта GLASS">
-        <h3 class="project__title">GLASS</h3>
-        <p class="project__description">разработка интерфейса</p>
+        <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
+            <img src="resources/project-glass.png" alt="Проект сайта GLASS">
+            <h3 class="project__title">GLASS</h3>
+            <p class="project__description">разработка интерфейса</p>
+        </a>
     </li>
         <li class="project">
-            <img src="resources/project-fesiyen.png" alt="Проект сайта Fesiyen">
-            <h3 class="project__title">Fesiyen</h3>
-            <p class="project__description">разработка интерфейса</p>
+            <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
+                <img src="resources/project-fesiyen.png" alt="Проект сайта Fesiyen">
+                <h3 class="project__title">Fesiyen</h3>
+                <p class="project__description">разработка интерфейса</p>
+            </a>
         </li>
         </ul>
     <a class="project-btn" href="#projects">Смотреть все проекты</a>
