--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Портфолио</title>
   </head>
   <body>
+    <!-- Хэдер -->
     <header class="header">
         <div class="container">
 <a class="logo" href="#">Fakhrutdinov</a>
@@ -23,6 +24,7 @@
         </div>
     </header>
     <main class="main">
+         <!-- О мне -->
         <section class="about-me">
             <div class="container">
           <p class="about-me__description">
@@ -34,6 +36,7 @@
           </h1>
         </div>
       </section>
+       <!-- Проекты -->
           <section class="projects" id="projects">
             <div class="container">
     <h2 class="projects__title">Самые свежие проекты</h2>
@@ -62,6 +65,7 @@
         </ul>
     <a class="project-btn" href="#projects">Смотреть все проекты</a>
  </section>
+  <!-- Компетенции -->
     <section class="competencies" id="competencies">
         <div class="container">
             <h2 class="competencies__title">Мои компетенции</h2>
@@ -89,6 +93,7 @@
             </ul>
         </div>
     </section>
+     <!-- Услуги -->
     <section class="services" id="services">
         <div class="container">
             <h2 class="services__title">Помогаю реализовать <br>широкий спектр задач</h2>
@@ -118,6 +123,7 @@
                         </div>
         </div>
     </section>
+     <!-- Контакты -->
     <section class="contacts" id="contacts">
         <div class="container">
             <div class="contatcs__text-wrapper">
@@ -135,6 +141,7 @@
         </div>
     </section>  
 </main>
+ <!-- Футер -->
 <footer class="footer">
     <div class="container">
             <p class="footer-text">Портфолио фротнтенд-разработчика Евгения Фахрутдинова</p>
