--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
             <ul class="service-list">
                 <li class="service">
                     <img class="service__image" src="resources/service-dev.png" alt="Изображение с созданием сайта">
-                    <div class="service__black-ellipse">
-                        <img src="resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                    <div class="service__background">
                         <h3 class="service__title">Разработка сайта под ключ</h3>
                         <p class="service__desc">Это создание дизайн веб-сайтов, созданный для удобства пользователя и решения бизнес-задач
                             Сайты должны быть понятными и удобными, ведь чем понятнее сайт, тем быстрее пользователь совершит целевое действие</p>
@@ -109,15 +108,13 @@
                 </li>
                 <li class="service">
                     <img class="service__image" src="resources/service-layout.png" alt="Изображение с созданием сайта">
-                    <div class="service__black-ellipse">
-                        <img src="resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                    <div class="service__background">
                         <h3 class="service__title">Верстка сайтов</h3>
                         <p class="service__desc">Это процесс создания HTML-документов и применения к ним стилей на CSS. Фронтенд разработчик может помочь создать привлекательный и удобный интерфейс для вашего сайта</p>
                     </div>
                     <li class="service">
                         <img class="service__image" src="resources/service-mobiledev.png" alt="Изображение с разработкой мобильного интерфейса">
-                        <div class="service__black-ellipse">
-                            <img src="resources/service-blackellipse.png" alt="Черный квадрат с закругленными краями">
+                        <div class="service__background">
                             <h3 class="service__title">Разработка мобильного интерфейса</h3>
                             <p class="service__desc">Это процесс создания интерактивных элементов на странице с помощью JavaScript. Фронтенд разработчик может помочь создать динамический и удобный пользовательский интерфейс для вашего сайта или приложения.</p>
                         </div>
@@ -128,14 +125,14 @@
         <div class="container">
             <div class="contatcs__text-wrapper">
                 <h2 class="contacts__title">для связи:</h2>
-                <p class="contacts__insta">
-                    <a class="contacts__insta-link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
+                <p class="contacts__link-wrapper">
+                    <a class="contacts__link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
                 </p>
-                <p class="contacts__tlg">
-                    <a class="contacts__tlg-link" href="https://t.me/iamfromfuture" target="_blank">telegram</a>
+                <p class="contacts__link-wrapper">
+                    <a class="contacts__link" href="https://t.me/iamfromfuture" target="_blank">telegram</a>
                 </p>
-                <p class="contacts__mail">
-                    <a class="contacts__mail-link" href="mailto:eugenefahrut@gmail.com">mail</a>
+                <p class="contacts__link-wrapper">
+                    <a class="contacts__link" href="mailto:eugenefahrut@gmail.com">mail</a>
                 </p>
             </div>
         </div>
