add width to titles

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             повышают престиж компании и позволяют выделиться на фоне конкурентов
           </p>
           <h1 class="about-me__title">
-            Привет, я Женя — <br>фронтенд разработчик и дизайнер сайтов
+            Привет, я Женя — фронтенд разработчик и дизайнер сайтов
           </h1>
         </div>
       </section>
@@ -96,7 +96,7 @@
      <!-- Услуги -->
     <section class="services" id="services">
         <div class="container">
-            <h2 class="services__title">Помогаю реализовать <br>широкий спектр задач</h2>
+            <h2 class="services__title">Помогаю реализовать широкий спектр задач</h2>
             <ul class="service-list">
                 <li class="service">
                     <img class="service__image" src="resources/service-dev.png" alt="Изображение с созданием сайта">
