--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
                 <li class="competention">
                     <img class="competention__image" src="resources/html-img.png" alt="html image">
                     <h3 class="competention__title">HTML и CSS</h3>
-                    <p class="competention__desc">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
+                    <p class="competention__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
                 </li>
                 <li class="competention">
                     <img class="competention__image" src="resources/js-img.png" alt="JavaScript image">
                     <h3 class="competention__title">JavaScript</h3>
-                    <p class="competention__desc">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
+                    <p class="competention__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
                 </li>
                 <li class="competention">
                     <img class="competention__image" src="resources/lib-img.png" alt="Library image">
                     <h3 class="competention__title">Работа с библиотеками и фреймворками</h3>
-                    <p class="competention__desc">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+                    <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
                 </li>
                 <li class="competention">
                     <img class="competention__image" src="resources/web-img.png" alt="Web image">
@@ -100,7 +100,7 @@
             <ul class="service-list">
                 <li class="service">
                     <img class="service__image" src="resources/service-dev.png" alt="Изображение с созданием сайта">
-                    <div class="service__background">
+                    <div class="service-description__wrapper">
                         <h3 class="service__title">Разработка сайта под ключ</h3>
                         <p class="service__desc">Это создание дизайн веб-сайтов, созданный для удобства пользователя и решения бизнес-задач
                             Сайты должны быть понятными и удобными, ведь чем понятнее сайт, тем быстрее пользователь совершит целевое действие</p>
@@ -108,13 +108,13 @@
                 </li>
                 <li class="service">
                     <img class="service__image" src="resources/service-layout.png" alt="Изображение с созданием сайта">
-                    <div class="service__background">
+                    <div class="service-description__wrapper">
                         <h3 class="service__title">Верстка сайтов</h3>
                         <p class="service__desc">Это процесс создания HTML-документов и применения к ним стилей на CSS. Фронтенд разработчик может помочь создать привлекательный и удобный интерфейс для вашего сайта</p>
                     </div>
                     <li class="service">
                         <img class="service__image" src="resources/service-mobiledev.png" alt="Изображение с разработкой мобильного интерфейса">
-                        <div class="service__background">
+                        <div class="service-description__wrapper">
                             <h3 class="service__title">Разработка мобильного интерфейса</h3>
                             <p class="service__desc">Это процесс создания интерактивных элементов на странице с помощью JavaScript. Фронтенд разработчик может помочь создать динамический и удобный пользовательский интерфейс для вашего сайта или приложения.</p>
                         </div>
@@ -123,18 +123,10 @@
      <!-- Контакты -->
     <section class="contacts" id="contacts">
         <div class="container">
-            <div class="contatcs__text-wrapper">
                 <h2 class="contacts__title">для связи:</h2>
-                <p class="contacts__link-wrapper">
                     <a class="contacts__link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
-                </p>
-                <p class="contacts__link-wrapper">
                     <a class="contacts__link" href="https://t.me/iamfromfuture" target="_blank">telegram</a>
-                </p>
-                <p class="contacts__link-wrapper">
-                    <a class="contacts__link" href="mailto:eugenefahrut@gmail.com">mail</a>
-                </p>
-            </div>
+                    <a class="contacts__link" href="mailto:eugenefahrut@gmail.com" target="_blank">mail</a>
         </div>
     </section>  
 </main>
