--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <main class="main">
-         <!-- О мне -->
+         <!-- Обо мне -->
         <section class="about-me">
             <div class="container">
           <p class="about-me__description">
@@ -133,8 +133,8 @@
  <!-- Футер -->
 <footer class="footer">
     <div class="container">
-            <p class="footer-text">Портфолио фротнтенд-разработчика Евгения Фахрутдинова</p>
-            <p class="footer-desc">Все права защищены. 2023</p>
+            <p class="footer__text">Портфолио фротнтенд-разработчика Евгения Фахрутдинова</p>
+            <p class="footer__desc">Все права защищены. 2023</p>
     </div>
 </footer>
   </body>
