--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>Портфолио</title>
   </head>
   <body>
+
     <!-- Хэдер -->
+
     <header class="header">
-        <div class="container">
+        <div class="container header__inner">
 <a class="logo" href="#">Fakhrutdinov</a>
         <nav class="nav">
             <a href="#projects" class="nav-link">портфолио</a>
@@ -24,7 +26,9 @@
         </div>
     </header>
     <main class="main">
+
          <!-- Обо мне -->
+
         <section class="about-me">
             <div class="container">
           <p class="about-me__description">
@@ -36,64 +40,91 @@
           </h1>
         </div>
       </section>
+
        <!-- Проекты -->
+
           <section class="projects" id="projects">
             <div class="container">
     <h2 class="projects__title">Самые свежие проекты</h2>
     <ul class="project-list">
         <li class="project">
             <a href="https://evgenyfakhrutdinov.github.io/metrika-site/" target="_blank">
-                <img src="resources/project-metrika.png" alt="Проект сайта Metrika">
+                <picture>
+                    <source
+                    media="(max-width: 1199px)"
+                    src="resources/poject-metrika_tablet.png">
+                    <img class="project__image" src="resources/project-metrika.png" alt="Проект сайта Metrika">
+                </picture>
+                <p class="project__text">дизайн интерьера</p>
                 <h3 class="project__title">Metrika</h3>
-                <p class="project__description">дизайн, верстка, настройка</p>
+                <p class="project__description">верстка, настройка</p>
             </a>
         </li>
     <li class="project">
         <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
-            <img src="resources/project-glass.png" alt="Проект сайта GLASS">
-            <h3 class="project__title">GLASS</h3>
-            <p class="project__description">разработка интерфейса</p>
+            <picture>
+                <source
+                media="(max-width: 1199px)"
+                src="resources/project-nothing_tablet.png">
+                <img class="project__image" src="resources/project-nothing.png" alt="Проект сайта Nothing">
+            </picture>
+            <p class="project__text">презентация продукта</p>
+            <h3 class="project__title">Nothing</h3>
+            <p class="project__description">верстка, настройка</p>
         </a>
     </li>
         <li class="project">
             <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
-                <img src="resources/project-fesiyen.png" alt="Проект сайта Fesiyen">
-                <h3 class="project__title">Fesiyen</h3>
-                <p class="project__description">разработка интерфейса</p>
+                <picture>
+                    <source
+                    media="(max-width: 1199px)"
+                    src="resources/project-toptrip_tablet.png">
+                    <img class="project__image" src="resources/project-toptrip.png" alt="Проект сайта TOPTRIP">
+                </picture>
+                <p class="project__text">заказ путешествий</p>
+                <h3 class="project__title">TOPTRIP</h3>
+                <p class="project__description">верстка</p>
             </a>
         </li>
         </ul>
     <a class="project-btn" href="#projects">Смотреть все проекты</a>
  </section>
+
   <!-- Компетенции -->
+
     <section class="competencies" id="competencies">
         <div class="container">
             <h2 class="competencies__title">Мои компетенции</h2>
             <ul class="competencies-list">
-                <li class="competention">
-                    <img class="competention__image" src="resources/html-img.png" alt="html image">
-                    <h3 class="competention__title">HTML и CSS</h3>
-                    <p class="competention__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
-                </li>
-                <li class="competention">
-                    <img class="competention__image" src="resources/js-img.png" alt="JavaScript image">
-                    <h3 class="competention__title">JavaScript</h3>
-                    <p class="competention__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
-                </li>
-                <li class="competention">
-                    <img class="competention__image" src="resources/lib-img.png" alt="Library image">
-                    <h3 class="competention__title">Работа с библиотеками и фреймворками</h3>
-                    <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
-                </li>
-                <li class="competention">
-                    <img class="competention__image" src="resources/web-img.png" alt="Web image">
-                    <h3 class="competention__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
-                    <p class="competention__desc">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
-                </li>
+                        <li class="competention">
+                            <img class="competention__image" src="resources/html-img.png" alt="html image">
+                            <h3 class="competention__title">HTML и CSS</h3>
+                            <p class="competention__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
+                        </li>
+
+                            <li class="competention">
+                                <img class="competention__image" src="resources/js-img.png" alt="JavaScript image">
+                                <h3 class="competention__title">JavaScript</h3>
+                                <p class="competention__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
+                            </li>
+
+                        <li class="competention">
+                            <img class="competention__image" src="resources/lib-img.png" alt="Library image">
+                            <h3 class="competention__title">Работа с библиотеками и фреймворками</h3>
+                            <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+                        </li>
+
+                        <li class="competention">
+                            <img class="competention__image" src="resources/web-img.png" alt="Web image">
+                            <h3 class="competention__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
+                            <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
+                        </li>
             </ul>
         </div>
     </section>
+
      <!-- Услуги -->
+
     <section class="services" id="services">
         <div class="container">
             <h2 class="services__title">Помогаю реализовать широкий спектр задач</h2>
@@ -120,21 +151,38 @@
                         </div>
         </div>
     </section>
+
      <!-- Контакты -->
+
     <section class="contacts" id="contacts">
         <div class="container">
-                <h2 class="contacts__title">для связи:</h2>
-                    <a class="contacts__link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
-                    <a class="contacts__link" href="https://t.me/iamfromfuture" target="_blank">telegram</a>
-                    <a class="contacts__link" href="mailto:eugenefahrut@gmail.com" target="_blank">mail</a>
+                <h2 class="contacts__title">Для связи со мной заполните простую форму</h2>
+<div class="contacts__input">
+    <input class="input" type="text" name="name" placeholder="Имя Фамилия">
+    <input class="input" type="email" name="email" placeholder="example@mail.com">
+</div>
+<button class="contacts__btn">Отправить</button>
         </div>
-    </section>  
+    </section>
 </main>
+
  <!-- Футер -->
+
 <footer class="footer">
     <div class="container">
+        <div class="footer__inner">
             <p class="footer__text">Портфолио фротнтенд-разработчика Евгения Фахрутдинова</p>
-            <p class="footer__desc">Все права защищены. 2023</p>
+            <div class="footer__contacts">
+                <a class="footer__contacts-link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
+                <a class="footer__contacts-link" href="https://t.me/iamfromfuture" target="_blank">telegram</a>
+                <a class="footer__contacts-link" href="mailto:eugenefahrut@gmail.com" target="_blank">mail</a>
+    </div>
+            </div>
+            <div class="footer__description-inner">
+                <p class="footer__description">Все права защищены. 2023</p>
+                <p class="footer__description">политика обработки данных</p>
+            </div>
+
     </div>
 </footer>
   </body>
