--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a class="logo" href="#">Fakhrutdinov</a>
+                <a class="logo" href="#main">Fakhrutdinov</a>
                 <nav class="nav">
                     <a href="#projects" class="nav-link">портфолио</a>
                     <a href="#competencies" class="nav-link">компетенции</a>
@@ -33,7 +33,6 @@
 
 <div class="js-burger burger">
     <div class="burger__content">
-        <a class="logo burger__logo" href="#">Fakhrutdinov</a>
         <nav class="burger__nav">
             <a href="#projects" class="burger__nav-link">портфолио</a>
             <a href="#competencies" class="burger__nav-link">компетенции</a>
@@ -50,7 +49,7 @@
     </div>
 </div>
 
-    <main class="main">
+    <main class="main" id="main">
 
          <!-- Обо мне -->
 
@@ -122,25 +121,25 @@
             <h2 class="competencies__title">Мои компетенции</h2>
             <ul class="competencies-list">
                         <li class="competention">
-                            <img class="competention__image" src="resources/html-img.png" alt="html image">
+                            <img class="competention__image" src="resources/icon-html.png" alt="html image">
                             <h3 class="competention__title">HTML и CSS</h3>
                             <p class="competention__description">это основа фронтенд разработки. Умение создавать и правильно структурировать HTML-документы, а также применять стили к этим документам на CSS, является обязательным навыком для каждого фронтенд разработчика.</p>
                         </li>
 
                             <li class="competention">
-                                <img class="competention__image" src="resources/js-img.png" alt="JavaScript image">
+                                <img class="competention__image" src="resources/icon-js.png" alt="JavaScript image">
                                 <h3 class="competention__title">JavaScript</h3>
                                 <p class="competention__description">это язык программирования, который используется для создания динамического и интерактивного пользовательского интерфейса. Хороший фронтенд разработчик должен быть знаком с основами JavaScript, включая работу с DOM-деревом, асинхронными запросами и манипуляцией данными на стороне клиента.</p>
                             </li>
 
                         <li class="competention">
-                            <img class="competention__image" src="resources/lib-img.png" alt="Library image">
+                            <img class="competention__image" src="resources/icon-mobdev.png" alt="Library image">
                             <h3 class="competention__title">Работа с библиотеками и фреймворками</h3>
                             <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
                         </li>
 
                         <li class="competention">
-                            <img class="competention__image" src="resources/web-img.png" alt="Web image">
+                            <img class="competention__image" src="resources/icon-react.png" alt="Web image">
                             <h3 class="competention__title">Разработка для мобильных <br> устройств и адаптивная верстка</h3>
                             <p class="competention__description">фронтенд разработчики должны быть знакомы с различными библиотеками и фреймворками, такими как React, Angular, Vue и другими. Умение использовать готовые решения, адаптировать их под нужды проекта и расширять их функциональность, является очень важным навыком.</p>
                         </li>
