--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
             <a href="https://evgenyfakhrutdinov.github.io/metrika-site/" target="_blank">
                 <picture>
                     <source
+                    media="(max-width: 767px)"
+                    srcset="resources/project-metrika_mobile.png">
+                    <source
                     media="(max-width: 1199px)"
-                    src="resources/poject-metrika_tablet.png">
+                    srcset="resources/poject-metrika_tablet.png">
                     <img class="project__image" src="resources/project-metrika.png" alt="Проект сайта Metrika">
                 </picture>
                 <p class="project__text">дизайн интерьера</p>
@@ -89,8 +92,11 @@
         <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
             <picture>
                 <source
+                media="(max-width: 767px)"
+                srcset="resources/project-nothing_mobile.png">
+                <source
                 media="(max-width: 1199px)"
-                src="resources/project-nothing_tablet.png">
+                srcset="resources/project-nothing_tablet.png">
                 <img class="project__image" src="resources/project-nothing.png" alt="Проект сайта Nothing">
             </picture>
             <p class="project__text">презентация продукта</p>
@@ -102,8 +108,11 @@
             <a href="https://evgenyfakhrutdinov.github.io/portfolio-site/" target="_blank">
                 <picture>
                     <source
+                    media="(max-width: 767px)"
+                    srcset="resources/project-toptrip_mobile.png">
+                    <source
                     media="(max-width: 1199px)"
-                    src="resources/project-toptrip_tablet.png">
+                    srcset="resources/project-toptrip_tablet.png">
                     <img class="project__image" src="resources/project-toptrip.png" alt="Проект сайта TOPTRIP">
                 </picture>
                 <p class="project__text">заказ путешествий</p>
