--- a/index.html
+++ b/index.html
@@ -211,13 +211,15 @@
 
     <section class="contacts" id="contacts">
         <div class="container">
-                <div class="contacts-wrapper">
+                <div class="contacts__wrapper">
+                    <form action="#" enctype="text/plain"></form>
                     <h2 class="contacts__title">Для связи со мной заполните простую форму</h2>
-                    <form action="#" enctype="text/plain">
+
                         <div class="contacts__input">
                             <input class="input" type="text" name="name" placeholder="Имя Фамилия">
                             <input class="input" type="email" name="email" placeholder="example@mail.com">
                         </div>
+
                         <button class="contacts__btn">Отправить</button>
                     </form>
                 </div>
@@ -229,7 +231,7 @@
 
 <footer>
     <div class="container">
-        <div class="footer__inner">
+        <div class="footer__wrapper">
             <p class="footer__text">Портфолио фротнтенд-разработчика Евгения Фахрутдинова</p>
             <div class="footer__contacts">
                 <a class="footer__contacts-link" href="https://www.instagram.com/iamfromfuture/" target="_blank">instagram</a>
